refactor the entire codebase